--- a/style.css
+++ b/style.css
@@ -15,16 +15,24 @@ body {
 }
   
 .card {
-  width: 311px;
-  height: 220px;
-  border-radius: 8px;
+  /* width: 311px;
+  height: 220px; */
+  /* border: # 1px; */
+  /* border-radius: 8px; */
+  margin: 3%;
+  padding: 3%;
+  border: 0.1px solid #d6d6d6;
+    border-radius: 8px;
+    padding: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .title {
   max-width: 90%;
-  padding: 5px;
-  margin-right: 40px;
-  margin-top: -20px;
+  padding: 10px;
+  /* margin-right: 40px;
+  margin-top: -20px; */
   margin-bottom: 60px;
   }
 
@@ -106,50 +114,12 @@ color: #344563;
     margin-top: -70px;
 }
 
-/* .lang1 {
-    width: 40px;
-height: 16px;
-font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 16px;
-letter-spacing: 0.03em;
-color: #6070FF;
-margin-right: 25px;
-border-radius: 8px;
-background: #C1C7D0;
-
-display: flex;
-align-items: center;
-justify-content: center;
-} */
-
 .lang1 {
-    /* width: 40px;
-height: 16px;
-font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 16px;
-letter-spacing: 0.03em;
-
-margin-right: 25px;
-border-radius: 8px;
-background: #C1C7D0;
-
-display: flex;
-align-items: center;
-justify-content: center; */
-/* height: 9px;
-    width: 9px; */
     padding: 7px;
     background-color: #EBEBFF;
     border-radius: 20%;
     color: #6070FF;
     margin: 8px;
-    /* color: ; */
 }
 
 .lang2 {
@@ -194,22 +164,24 @@ li {
     list-style-type: none;
   }
 
-  button {
-  height: 40px;
-  width: 100px;
+.last {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-right: 20px;
+  padding-left: 20px;
   cursor: pointer;
   background-color: #fff;
   border: none;
   color: #396DF2;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 12px;
-        margin: 4px 2px;
-      border-radius: 8px;
-      border: 2px solid #396DF2;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 20px 1px 60px 10px;
+  border-radius: 8px;
+  border: 2px solid #396DF2;
+  align-items: center;
       
   }
 
@@ -249,7 +221,10 @@ margin-bottom: 20px;
   }
 
   .bg {
-    margin-left: 15px;
+    /* margin-left: 15px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
 .text {
@@ -264,7 +239,7 @@ color: #000000;
 }
 
 .bgCard {
- width: 375px;
+ width: 100%;
 height: 779px;
 background: #6070FF;
 position: relative;
@@ -274,7 +249,6 @@ position: relative;
     width: 100%;
     position: absolute;
     height: 700px;
-
 }
 
 .center {
@@ -381,5 +355,16 @@ align-items: center;
 text-align: center;
 letter-spacing: 0.03em;
 color: #6070FF;
-;
+}
+
+.lowestdiv {
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+}
+
+.lowestdiv .content {
+    height: 10px;
+    width: 50%;
+    background-color: black;
 }
