--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   background: #fff;
 }
 
-.grid { 
+.grid {
   display: grid;
   grid-template-rows: repeat(4, 4fr);
   gap: 50px;
@@ -19,6 +19,7 @@ body {
   padding: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 
 .title {
   max-width: 90%;
@@ -42,11 +43,11 @@ body {
   display: flex;
   justify-content: flex-start;
   margin-left: -40px;
-  align-items: center;  
+  align-items: center;
 }
 
 .items li {
-  margin: 5px;    
+  margin: 5px;
 }
 
 .item1 {
@@ -71,7 +72,7 @@ body {
   font-weight: 600;
   font-size: 13px;
   line-height: 16px;
-  color: #7A869A;
+  color: #7a869a;
 }
 
 .item3 {
@@ -80,7 +81,7 @@ body {
   font-weight: 600;
   font-size: 13px;
   line-height: 16px;
-  color: #7A869A;
+  color: #7a869a;
 }
 
 .headlineText {
@@ -95,13 +96,13 @@ body {
 .lang {
   display: flex;
   justify-content: flex-start;
-  margin-left: -40px; 
+  margin-left: -40px;
   margin-top: -70px;
 }
 
 .lang1 {
   padding: 7px;
-  background-color: #EBEBFF;
+  background-color: #ebebff;
   border-radius: 20%;
   color: #6070ff;
   margin: 8px;
@@ -116,7 +117,7 @@ body {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  color: #6070FF;
+  color: #6070ff;
   margin-right: 25px;
   border-radius: 8px;
   background: #c1c7d0;
@@ -147,7 +148,7 @@ body {
 li {
   text-decoration: none;
   list-style-type: none;
-  }
+}
 
 .last {
   padding-top: 2px;
@@ -156,8 +157,7 @@ li {
   padding-left: 20px;
   cursor: pointer;
   background-color: #fff;
-  border: none;
-  color: #396DF2;
+  color: #396df2;
   display: flex;
   justify-content: center;
   text-decoration: none;
@@ -165,7 +165,7 @@ li {
   font-size: 14px;
   margin: 20px 1px 60px 10px;
   border-radius: 8px;
-  border: 2px solid #396DF2;
+  border: 2px solid #396df2;
   align-items: center;
 }
 
@@ -174,7 +174,7 @@ h3 {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  color: #7f8cff; 
+  color: #7f8cff;
 }
 
 .connect {
@@ -185,7 +185,6 @@ h3 {
 
 .connecthead {
   margin-top: -70px;
-
 }
 
 .socials {
@@ -203,7 +202,7 @@ h3 {
   display: flex;
   width: 303px;
   height: 66.72px;
-  background: #F7F7F9;
+  background: #f7f7f9;
   border-radius: 8px;
   margin-bottom: 20px;
 }
@@ -212,7 +211,7 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
- }
+}
 
 .text {
   height: 24px;
@@ -221,13 +220,13 @@ h3 {
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
-  color: #000000;
+  color: #000;
 }
 
 .bgCard {
   width: 100%;
   height: 779px;
-  background: #6070FF;
+  background: #6070ff;
   position: relative;
 }
 
@@ -238,15 +237,15 @@ h3 {
 }
 
 .contactTitle {
-    font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
-    font-style: normal;
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
   display: flex;
   align-items: center;
   text-align: center;
-  color: #FFFFFF;
+  color: #fff;
   padding-top: 80px;
 }
 
@@ -257,7 +256,7 @@ h3 {
   font-size: 20px;
   line-height: 24px;
   text-align: center;
-  color: #EBEBFF;
+  color: #ebebff;
   margin-left: -3px;
 }
 
@@ -265,8 +264,8 @@ h3 {
   background-color: #fff;
   height: 48px;
   width: 300px;
-  border-radius:8px ;
-  margin-bottom: 15px;
+  border-radius:8px;
+  margin-bottom:15px;
   display: flex;
   align-items: center;
   justify-content: start;
@@ -275,45 +274,43 @@ h3 {
 
 .card2Text {
   height: 18px;
-  font-family: 'Poppins';
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
   line-height: 20px;
-  color: #172B4D;
+  color: #172b4d;
 }
 
 .card3 {
   background-color: #fff;
-  height: 101px ;
-  width: 300px ;
-  margin-bottom:15px;
+  height: 101px;
+  width: 300px;
+  margin-bottom: 15px;
   border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: start;
-  padding-left: 15px
+  padding-left: 15px;
 }
 
 .card3Text {
-  font-family: 'Poppins';
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
-  color: #B3BAC5;
   display: flex;
   align-items: center;
   justify-content: start;
   padding-left: 15px;
-  color: #B3BAC5;
-
+  color: #b3bac5;
 }
 
 .card4 {
   background-color: #fff;
   height: 24px;
-  width:100px ;
+  width: 100px;
   border-radius: 8px; 
   margin-bottom: 15px; 
   display: flex;
