--- a/style.css
+++ b/style.css
@@ -1,22 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
 body {
-    max-width: 375px;
-    background: #fff;
-  }
-  
+  max-width: 375px;
+  background: #fff;
+}
+
+.grid {
+  display: grid;
+  grid-template-rows: repeat(4, 4fr);
+  gap: 50px;
+  align-items: center;
+}
+
 .card {
-  width: 311px;
-  height: 220px;
+  margin: 3%;
+  border: 0.1px solid #d6d6d6;
   border-radius: 8px;
+  padding: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .title {
   max-width: 90%;
-  padding: 5px;
-  margin-right: 40px;
-  margin-top: -20px;
-  }
+  padding: 10px;
+  margin-bottom: 60px;
+}
 
 .headlineTitle {
   width: 295px;
@@ -26,153 +34,313 @@ body {
   font-weight: 700;
   font-size: 32px;
   line-height: 44px;
-  color: #172B4D;
+  color: #172b4d;
   margin-bottom: 10px;
 }
 
 .items {
-    display: flex;
-    justify-content: flex-start;
-    margin-left: -40px; 
-     
+  display: flex;
+  justify-content: flex-start;
+  margin-left: -40px;
+  align-items: center;
+}
+
+.theli {
+  margin: 5px;
 }
 
 .item1 {
-  width: 55px;
-  height: 16px;
   font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-style: normal;
   font-weight: 600;
-font-size: 13px;
-line-height: 16px;
-color: #344563;
-margin-right: 25px;
+  font-size: 13px;
+  line-height: 16px;
+  color: #344563;
+}
+
+.dot {
+  height: 9px;
+  width: 9px;
+  background-color: #bbb;
+  border-radius: 50%;
 }
 
 .item2 {
-    width: 88px;
-    height: 16px;
-    font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 13px;
-    line-height: 16px;
-    color: #7A869A;
-    margin-right: 25px;
-
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7a869a;
 }
 
 .item3 {
- width: 29px;
-height: 16px;
-font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 13px;
-line-height: 16px;
-color: #7A869A;
-margin-right: 25px;
-
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7a869a;
 }
 
 .headlineText {
-  width: 295px;
-  height: 76px;
   font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-style: normal;
-font-weight: 400;
-font-size: 15px;
-line-height: 24px;
-color: #344563;
-
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #344563;
 }
 
 .lang {
-    display: flex;
-    justify-content: flex-start;
-    margin-left: -40px; 
-    margin-top: -20px;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: -40px;
+  margin-top: -70px;
 }
 
 .lang1 {
-    width: 40px;
-height: 16px;
-font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 16px;
-letter-spacing: 0.03em;
-color: #6070FF;
-margin-right: 25px;
-border-radius: 8px;
-background: #C1C7D0;
-
-display: flex;
-align-items: center;
-justify-content: center;
+  padding: 7px;
+  background-color: #ebebff;
+  border-radius: 20%;
+  color: #6070ff;
+  margin: 8px;
 }
 
 .lang2 {
-    width: 32px;
-    height: 16px;
-    font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    color: #6070FF;
-    margin-right: 25px;
-    border-radius: 8px;
-background: #C1C7D0;
-display: flex;
-align-items: center;
-justify-content: center;
+  width: 32px;
+  height: 16px;
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+  margin-right: 25px;
+  border-radius: 8px;
+  background: #c1c7d0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .lang3 {
-    width: 80px;
-    height: 16px;
-    font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    color: #6070FF;
-    margin-right: 25px;
-    border-radius: 8px;
-background: #C1C7D0;
-display: flex;
-align-items: center;
-justify-content: center;
-padding-left: 8px;
+  width: 80px;
+  height: 16px;
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+  margin-right: 25px;
+  border-radius: 8px;
+  background: #c1c7d0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 8px;
 }
 
 li {
-    text-decoration: none;
-    list-style-type: none;
-  }
+  text-decoration: none;
+  list-style-type: none;
+}
 
-  button {
-    height: 40px;
-    width: 100px;
-        cursor: pointer;
-        background-color: #fff;
-        border: none;
-        color: #396DF2;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 12px;
-        margin: 4px 2px;
-      border-radius: 8px;
-      border: 2px solid #396DF2;
-margin-bottom: 40px;
-      
-  }
-
+.last {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-right: 20px;
+  padding-left: 20px;
+  cursor: pointer;
+  background-color: #fff;
+  color: #396df2;
   
+  justify-content: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 20px 1px 60px 10px;
+  border-radius: 8px;
+  border: 2px solid #396df2;
+  align-items: center;
+}
+
+h3 {
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  color: #7f8cff;
+}
+
+.connect {
+  display: flex;
+  justify-content: flex-start;
+  margin-left: -40px;
+}
+
+.connecthead {
+  margin-top: -70px;
+}
+
+.socials {
+  margin-right: 15px;
+  color: #505f79;
+}
+
+.flex1 {
+  display: flex;
+  justify-content: space-between;
+  width: 280px;
+}
+
+.flex {
+  display: flex;
+  width: 303px;
+  height: 66.72px;
+  background: #f7f7f9;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.bg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text {
+  height: 24px;
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000;
+}
+
+.bgCard {
+  width: 100%;
+  height: 779px;
+  background: #6070ff;
+  position: relative;
+}
+
+.contact-shapes {
+  width: 100%;
+  position: absolute;
+  height: 700px;
+}
+
+.contactTitle {
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+  padding-top: 80px;
+}
+
+.contactText {
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #ebebff;
+  margin-left: -3px;
+}
+
+.card2 {
+  background-color: #fff;
+  height: 48px;
+  width: 300px;
+  border-radius: 8px;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-left: 15px;
+}
+
+.card2Text {
+  height: 18px;
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 20px;
+  color: #172b4d;
+}
+
+.card3 {
+  background-color: #fff;
+  height: 101px;
+  width: 300px;
+  margin-bottom: 15px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-left: 15px;
+}
+
+.card3Text {
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-left: 15px;
+  color: #b3bac5;
+}
+
+.card4 {
+  background-color: #fff;
+  height: 24px;
+  width: 100px;
+  border-radius: 8px;
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding-left: 15px;
+  color: #6070ff;
+}
+
+.card4Text {
+  height: 24px;
+  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+}
+
+.lowestdiv {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+.lowestdiv .content {
+  height: 10px;
+  width: 50%;
+  background-color: black;
+}
