--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   gap: 50px;
   align-items: center;
 }
-  
+
 .card {
   margin: 3%;
   border: 0.1px solid #d6d6d6;
@@ -19,7 +19,6 @@ body {
   padding: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
 
 .title {
   max-width: 90%;
@@ -46,7 +45,7 @@ body {
   align-items: center;
 }
 
-.items li {
+.theli {
   margin: 5px;
 }
 
@@ -158,7 +157,7 @@ li {
   cursor: pointer;
   background-color: #fff;
   color: #396df2;
-  display: flex;
+  
   justify-content: center;
   text-decoration: none;
   display: inline-block;
@@ -264,8 +263,8 @@ h3 {
   background-color: #fff;
   height: 48px;
   width: 300px;
-  border-radius:8px;
-  margin-bottom:15px;
+  border-radius: 8px;
+  margin-bottom: 15px;
   display: flex;
   align-items: center;
   justify-content: start;
@@ -311,8 +310,8 @@ h3 {
   background-color: #fff;
   height: 24px;
   width: 100px;
-  border-radius: 8px; 
-  margin-bottom: 15px; 
+  border-radius: 8px;
+  margin-bottom: 15px;
   display: flex;
   align-items: center;
   justify-content: start;
