--- a/style.css
+++ b/style.css
@@ -245,24 +245,6 @@ li {
   list-style-type: none;
 }
 
-.last {
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-right: 20px;
-  padding-left: 20px;
-  cursor: pointer;
-  background-color: #fff;
-  color: #396df2;
-  justify-content: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  margin: 20px 1px 60px 10px;
-  border-radius: 8px;
-  border: 2px solid #396df2;
-  align-items: center;
-}
-
 h3 {
   font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-style: normal;
@@ -317,18 +299,30 @@ h3 {
   color: #000;
 }
 
-.bgCard {
-  width: 100%;
+.contact-parent {
+  max-width: 375px;
   height: 779px;
   background: #6070ff;
   position: relative;
 }
 
-.contact-shapes {
+.bgCard {
+  max-width: 100%;
+  height: 779px;
+  background: #6070ff;
+  position: relative;
+  padding: 24px;
+  border-radius: 50px 0 0 0;
+}
+
+.center {
+  text-align: center;
+}
+/* .contact-shapes {
   width: 100%;
   position: absolute;
   height: 700px;
-}
+} */
 
 .contactTitle {
   font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
@@ -336,11 +330,10 @@ h3 {
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
-  display: flex;
-  align-items: center;
-  text-align: center;
   color: #fff;
   padding-top: 80px;
+  letter-spacing: 0em;
+  margin-bottom: 12px;
 }
 
 .contactText {
@@ -349,21 +342,22 @@ h3 {
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
-  text-align: center;
+  /* text-align: center; */
   color: #ebebff;
   margin-left: -3px;
 }
 
 .card2 {
   background-color: #fff;
-  height: 48px;
-  width: 300px;
-  border-radius: 8px;
+  height: 30px;
+  width: 270px;
+  border-radius: 12px;
   margin-bottom: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  padding-left: 15px;
+  border: none;
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  outline: none;
 }
 
 .card2Text {
@@ -379,13 +373,12 @@ h3 {
 .card3 {
   background-color: #fff;
   height: 101px;
-  width: 300px;
-  margin-bottom: 15px;
+  width: 270px;
   border-radius: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  padding-left: 15px;
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  outline: none;
 }
 
 .card3Text {
@@ -401,37 +394,29 @@ h3 {
   color: #b3bac5;
 }
 
-.card4 {
+  .last {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-right: 20px;
+  padding-left: 20px;
+  cursor: pointer;
   background-color: #fff;
-  height: 24px;
-  width: 100px;
-  border-radius: 8px;
-  margin-bottom: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  padding-left: 15px;
   color: #6070ff;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin-top: 23px;
+  margin-bottom: 40px;
+  border-radius: 8px;
+  border: 2px solid #396df2;
+  align-items: center;
 }
 
-.card4Text {
-  height: 24px;
-  font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 17px;
-  line-height: 24px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #6070ff;
-}
 
 .lowestdiv {
   display: flex;
   justify-content: center;
-  margin-top: 80px;
+  margin-top: -20px;
 }
 
 .lowestdiv .content {
