--- a/style.css
+++ b/style.css
@@ -307,10 +307,10 @@ h3 {
 }
 
 .contactShapes {
-position: absolute;
-width: 225px;
-height: 656.17px;
-left: 153px;
+  position: absolute;
+  width: 225px;
+  height: 656.17px;
+  left: 153px;
 }
 
 .center {
@@ -324,7 +324,7 @@ left: 153px;
   left: 305px;
   top: 35px;
   transform: rotate(-23.18deg);
-  background: #7F8CFF;
+  background: #7f8Cff;
 }
 
 .ellipse3 {
@@ -332,12 +332,11 @@ left: 153px;
   width: 90px;
   height: 89px;
   top: 40px;
-  left: 328px;  
+  left: 328px;
   background: #fff;
   border-radius: 60%;
   box-shadow: 10px 15px 0 0 red;
   transform: rotate(83.18deg);
-
 } 
 
 .ellipse12 {
@@ -347,7 +346,7 @@ left: 153px;
   left: 153px;
   border-radius: 50px;
   top: 55px;
-  background: #7F8CFF;
+  background: #7f8cff;
 }
 
 .rectangle7 {
@@ -356,7 +355,7 @@ left: 153px;
   height: 13.63px;
   left: 258.8px;
   top: 640px;
-  background: #7F8CFF;
+  background: #7f8cff;
   transform: matrix(0.8, 0.6, 0.6, -0.8, 0, 0);
 }
 
@@ -432,7 +431,7 @@ input {
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
-  color: #172B4D;
+  color: #172b4d;
 }
 
 .last {
@@ -441,7 +440,6 @@ input {
   cursor: pointer;
   background-color: #fff;
   color: #6070ff;
-  font-size: 14px;
   margin-top: 23px;
   margin-bottom: 40px;
   border-radius: 8px;
