--- a/style.css
+++ b/style.css
@@ -296,12 +296,12 @@ h3 {
 }
 
 .bgCard {
-  margin-left: -20px;
-  width: 330px;
+  margin-left: -16px;
+  padding-top: 20px;
+  width: 375px;
   height: 779px;
   background: #6070ff;
   position: relative;
-  padding: 24px;
   border-radius: 50px 0 0 0;
   margin-top: 100px;
 }
@@ -389,7 +389,10 @@ h3 {
   font-size: 20px;
   line-height: 24px;
   color: #ebebff;
-  margin-left: -3px;
+}
+
+form {
+  margin-left: -50px;
 }
 
 .card2 {
@@ -399,9 +402,9 @@ h3 {
   border-radius: 12px;
   margin-bottom: 15px;
   border: none;
-  padding-left: 16px;
   padding-top: 15px;
   padding-bottom: 15px;
+  padding-left: 10px;
   outline: none;
 }
 
@@ -410,9 +413,9 @@ h3 {
   height: 101px;
   width: 270px;
   border-radius: 8px;
-  padding-left: 16px;
   padding-top: 15px;
   padding-bottom: 15px;
+  padding-left: 10px;
   outline: none;
 }
 
@@ -435,13 +438,16 @@ input {
 }
 
 .last {
+  display: flex;
+  flex-direction: row;
+  margin-left: 55px;
   border: none;
   padding: 16px;
   cursor: pointer;
   background-color: #fff;
   color: #6070ff;
   margin-top: 23px;
-  margin-bottom: 40px;
+  /* margin-bottom: 20px; */
   border-radius: 8px;
   font-family: 'Poppins', Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-style: normal;
