--- a/style.css
+++ b/style.css
@@ -296,6 +296,7 @@ h3 {
 }
 
 .bgCard {
+  background-image: url("assets/shapes/contactShapes.png");
   margin-left: -16px;
   padding-top: 20px;
   width: 375px;
