--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ h3 {
   padding-top: 20px;
   width: 375px;
   height: 779px;
-  background: #6070ff;
+  background-color: #6070ff;
   position: relative;
   border-radius: 50px 0 0 0;
   margin-top: 100px;
@@ -448,7 +448,6 @@ input {
   background-color: #fff;
   color: #6070ff;
   margin-top: 23px;
-  /* margin-bottom: 20px; */
   border-radius: 8px;
   font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-style: normal;
