--- a/style.css
+++ b/style.css
@@ -296,11 +296,12 @@ h3 {
 }
 
 .bgCard {
-  background-image: url(./assets/shapes/contactShapes.png);
+  background-image: url(assets/shapes/contactShapes.png);
+  background-size:cover;
   margin-left: -16px;
   padding-top: 20px;
-  width: 375px;
-  height: 779px;
+  width: 357px;
+  height: 780px;
   background-color: #6070ff;
   position: relative;
   border-radius: 50px 0 0 0;
@@ -308,7 +309,6 @@ h3 {
 }
 
 .contactShapes {
-  position: absolute;
   width: 225px;
   height: 656.17px;
   left: 153px;
@@ -378,7 +378,7 @@ h3 {
   font-size: 40px;
   line-height: 52px;
   color: #fff;
-  padding-top: 60px;
+  padding-top: 90px;
   letter-spacing: 0;
   margin-bottom: 12px;
 }
@@ -386,7 +386,7 @@ h3 {
 .contactText {
   font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 20px;
   line-height: 24px;
   color: #ebebff;
