--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   width: 60%;
   background: #fff;
 }
-.header1 {
+.nav, .banner .cardd {
   display: none;
 }
 
@@ -471,15 +471,15 @@ input {
     
 }
 
-.header, .imgdiv {
+.header, .imgdiv, .card {
   display: none;
 }
 
-.header1 {
+.nav {
   position: absolute;
   top: 1px;
   left: 0;
-  width: 1224px;
+  width: 1124px;
   padding-top: 25px;
   padding-left: 155px;
   padding-right: 154px;
@@ -489,7 +489,7 @@ input {
   background: #fff;
 }
 
-.header1 .logo {
+.nav .logo {
   color: #6070FF;
   font-weight: 700;
   font-size: 18px;
@@ -499,7 +499,7 @@ input {
   line-height: 20px;
 }
 
-.header1 .navigation {
+.nav .navigation {
   position: relative;
   display: flex;
 }
@@ -522,14 +522,13 @@ input {
 .banner {
   margin-top: 100px;
   position: relative;
-  width: 100%;
-  min-height: 70vh;
+  width: 1440px;
   display: flex;
   justify-content: center;
   align-items: center;
   background: url(./assets/Headerbgdesktop.png);
   background-size: cover;
- }
+} 
 
 .banner .content {
   width: 90%;
@@ -563,9 +562,15 @@ input {
   color: #7f8cff;
 }
 
-.banner .connectTitle {
-  display: flex;
-  flex-direction: row;
+ .banner .connect {
+  /* width: 90%; */
+  /* padding-left: 20px; */
 }
-   
+
+.connectTitle {
+  margin-left: 103px;
+}
+
+.connectt {
+  margin-left: 60px;
 }
