--- a/style.css
+++ b/style.css
@@ -615,10 +615,10 @@ input {
 .but {
   font-family: "Poppins", Helvetica, Arial, Verdana, Tahoma, sans-serif;
   display: flex;
-  color: #396DF2;
+  color: #396df2;
   display: flex;
   flex-direction: row;
-  border: 1px solid #DFE1E6;
+  border: 1px solid #396df2;
   padding: 16px;
   cursor: pointer;
   background-color: #fff;
