--- a/style.css
+++ b/style.css
@@ -740,6 +740,15 @@ input {
     }
 }
 
+@keyframes slideInFromRight {
+  0% {
+      transform: translateX(100%);
+  }
+  100% {
+      transform: translateX(0);
+  }
+}
+
 }
 
 
